<resources>
    <string name="app_name">e-Publik BPSDMDJTG</string>
    <string name="menu_portal_berita">Portal Berita</string>
    <string name="menu_open_data">Open Data JatengProv</string>
    <string name="menu_open_data2">Open Data BPSDMD</string>
    <string name="menu_portal_ppid">Portal PPID</string>
    <string name="menu_layanan_informasi">Pelayanan Publik</string>
    <string name="menu_statistik">Informasi Statistik</string>
    <string name="menu_agenda_kegiatan">Agenda Kegiatan</string>
    <string name="submenu_stat_pelatihan">Statistik Peserta Pelatihan</string>
    <string name="submenu_stat_kelulusan">Statistik Kelulusan Peserta</string>
    <string name="submenu_stat_alumni">Statistik Alumni</string>
    <string name="submenu_stat_wi">Statistik Widyaiswara</string>
    <string name="submenu_hasil_evaluasi">Hasil Evaluasi Pelatihan</string>
    <string name="submenu_capaian_anggaran">Capaian Anggaran</string>
    <string name="submenu_stat_sdm">Statistik SDM</string>
    <string name="submenu_stat_permohonan_informasi">Statistik Permohonan Informasi</string>
</resources>