<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/halo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="id.go.jatengprov.bpsdmd.epublik.InfoStatistikActivity"
    tools:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="11dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#00BFA5"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_stat_peserta"
            android:text="@string/submenu_stat_pelatihan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#00BFA5"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_stat_kelulusan"
            android:text="@string/submenu_stat_kelulusan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#00BFA5"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_stat_alumni"
            android:text="@string/submenu_stat_alumni"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#00BFA5"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_stat_wi"
            android:text="@string/submenu_stat_wi"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#DD2C00"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_hasil_eval"
            android:text="@string/submenu_hasil_evaluasi"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24_white"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#DD2C00"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_capaian_anggaran"
            android:text="@string/submenu_capaian_anggaran"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24_white"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="#F3E5F5"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_stat_permohonan_informasi"
            android:text="@string/submenu_stat_permohonan_informasi"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24"
            android:padding="16dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="#F3E5F5"
            android:fontFamily="sans-serif-medium"
            android:onClick="webview_stat_sdm"
            android:text="@string/submenu_stat_sdm"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:drawableStart="@drawable/ic_outline_insert_chart_outlined_24"
            android:padding="16dp"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>